2004-01-28  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/rfcheader.c: fix rfc_lvl_3

2004-01-28  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* doc/old/FAQ_Fidogate: add old fidogate FAQ

2004-01-27  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/tick/ftntick.c: fix logging TickFileAction
	* src: change log() to fglog()
	* src/gate/rfc2ftn.c: fix generate MSGID
	* config.h.in: change FTN_RFC_HEADERS,
	    RFC_LVL_1_HEADERS, RFC_LVL_3_HEADERS

2004-01-25  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/areafix/areafix.c: change disable AF_AVAIL

2004-01-20  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/gate/rfc2ftn.c: fix disable FIDO_STYLE_MSGID
	* src/include/prototypes.h: fix disable FIDO_STYLE_MSGID
	* src/common/msgid.c: fix disable FIDO_STYLE_MSGID

2004-01-19  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/gate/rfc2ftn.c: fix disable FIDO_STYLE_MSGID
	* src/areafix/areafix.c: fix AF_AVAIL, fix disable
	    AF_AVAIL

2004-01-12  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* doc/examples: fixes

2004-01-09  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* doc/FAQ.ru: update

2003-12-28  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* configure.in: fix warning message

2003-12-07  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/charset/cyrillic.map: update

2003-12-03  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/charset/cyrillic.map: add belarussian(thanks to
	    Serge Serebro)

2003-12-01  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/gate/ftn2rfc.c: fix UseOriginForOrganization
	    (thanks to Anton Leer)
	* package/freebsd: update
	* config.h.in: remove vsprintf(), change to vsnprintf()
	* acconfig.h: remove vsprintf(), change to vsnprintf()
	* src/areafix/areafix.c: remove support vsprintf()
	* src/common/misc.c: remove support vsprintf()
	* src/common/textlist.c: remove support vsprintf()