@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
 dnl # Copy revision into the `configure' script
-AC_REVISION([$Id: configure.in,v 1.3 2003/12/28 13:43:37 rusfidogate Exp $])
+AC_REVISION([$Id: configure.in,v 1.4 2004/01/30 20:00:15 rusfidogate Exp $])
 dnl # Minimum Autoconf version required.
 AC_PREREQ(2.53)
 dnl # No comments...
@@ -36,6 +36,17 @@ case "$with_vardir" in
 yes) AC_MSG_ERROR([--with-vardir requires an argument; use --with-vardir=DIR]) ;;
 ''|no) ;;
 *) vardir="$withval" ;;
+esac
+])
+
+# Check for a --with-lockdir argument
+AC_ARG_WITH(lockdir, dnl
+    --with-lockdir=DIR	  set fidogate lock DIR,
+	    [dnl
+case "$with_lockdir" in
+yes) AC_MSG_ERROR([--with-lockdir requires an argument; use --with-lockdir=DIR]) ;;
+''|no) ;;
+*) LOCKDIR="$withval" ;;
 esac
 ])
 
@@ -481,8 +492,8 @@ fi
 AC_SUBST(SENDMAIL)
 
 AC_MSG_CHECKING(for lock directory)
-if test -d /var/lock; then
-	LOCKDIR=/var/lock/fidogate
+if test "${with_lockdir+set}" = set; then
+	LOCKDIR="$with_lockdir"
 elif test -d /var/run; then
 	LOCKDIR=/var/run/fidogate
 elif test -d /var/spool/lock; then
